# robotic-coursework-f2022

./: .gitignore  README.md
base_controller/: CMakeLists.txt  README.md  package.xml
base_controller/config/: agriculture.yaml  cafe.yaml  empty.yaml  mud.yaml  office.yaml
base_controller/include/base_controller/: BaseController.hpp
base_controller/launch/: agriculture.launch  cafe.launch  empty.launch  mud.launch  office.launch
base_controller/src/: BaseController.cpp  base_controller_node.cpp
base_controller/srv/: start.srv
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/config/: config.yaml
cubic_polynomial_planner/launch/: a2.launch  test_publisher_subscriber.launch
cubic_polynomial_planner/src/: server.cpp  subscriber.cpp
cubic_polynomial_planner/srv/: my_service.srv
hello_action/hello_action_client/: CMakeLists.txt  package.xml
hello_action/hello_action_client/include/hello_action_client/: ActionClient.hpp
hello_action/hello_action_client/src/: ActionClient.cpp  client.cpp
hello_action/hello_action_server/: CMakeLists.txt  package.xml
hello_action/hello_action_server/include/hello_action_server/: ActionServer.hpp  CubicPolyPlanner.hpp
hello_action/hello_action_server/launch/: test_service.launch
hello_action/hello_action_server/src/: ActionServer.cpp  CubicPolyPlanner.cpp  server.cpp
hello_action/hello_action_type/: CMakeLists.txt  package.xml
hello_action/hello_action_type/action/: Home.action  MoveTo.action
hello_action/simple_action/: CMakeLists.txt  package.xml
hello_action/simple_action/src/: client.cpp  server.cpp
highlevel_controller/: CMakeLists.txt  README.md  package.xml
highlevel_controller/config/: a6.yaml  a7.yaml  default-target.yaml
highlevel_controller/include/highlevel_controller/: CubicPolyController.hpp  HighLevelController.hpp  PotentialField.hpp  cubic_poly_planner.hpp
highlevel_controller/include/ros_package_template/: Algorithm.hpp  RosPackageTemplate.hpp
highlevel_controller/launch/: a5.launch  a6.launch  a7.launch
highlevel_controller/src/: Algorithm.cpp  CubicPolyController.cpp  HighLevelController.cpp  PotentialField.cpp  RosPackageTemplate.cpp  cubic_poly_planner.cpp  highlevel_controller_node.cpp
highlevel_controller/worlds/: a6.world
husky_teleop_controller/: CMakeLists.txt  package.xml
husky_teleop_controller/launch/: a1.launch  test_publisher.launch
husky_teleop_controller/src/: .subscriber.cpp.swp  husky_teleop_controller.cpp  subscriber.cpp
inverse_dynamics_controller/: CMakeLists.txt  package.xml
inverse_dynamics_controller/config/: default.yaml
inverse_dynamics_controller/include/inverse_dynamics_controller/: InverseDynamicsController.hpp  PotentialField.hpp
inverse_dynamics_controller/include/ros_package_template/: Algorithm.hpp  RosPackageTemplate.hpp
inverse_dynamics_controller/launch/: a4.launch  ros_package_template.launch
inverse_dynamics_controller/src/: Algorithm.cpp  InverseDynamicsController.cpp  PotentialField.cpp  RosPackageTemplate.cpp  TaskSpaceController.cpp  inverse_dynamics_controller_node.cpp  ros_package_template_node.cpp
inverse_dynamics_controller/srv/: move_to.srv
inverse_kinematic_controller/: CMakeLists.txt  package.xml
inverse_kinematic_controller/config/: config.yaml
inverse_kinematic_controller/launch/: a3.launch
inverse_kinematic_controller/src/: cubic_poly_planner.cpp  main.cpp  server.cpp
inverse_kinematic_controller/srv/: move_robot.srv
inverse_kinematic_controller/test/: test_eigen.cpp  test_orientations.cpp  test_pinocchio.cpp
