<?xml version="1.0"?>
<package format="2">
  	<name>base_controller</name>
  	<version>0.1.0</version>
  	<description>COMP597-A6</description>
  	<maintainer email="hsiu-chin.lin@cs.mcgill.ca">Hsiu-Chin Lin</maintainer>
  	<license>BSD</license>
  	<author email="hsiu-chin.lin@cs.mcgill.ca">Hsiu-Chin Lin</author>

  	<buildtool_depend>catkin</buildtool_depend>  
  	<depend>eigen</depend>
  	<depend>roscpp</depend>
  	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<build_depend>roslint</build_depend>
</package>
