<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.1.0</version>
  <description>A template for ROS packages.</description>
  <maintainer email="owen.glahn@cs.mcgill.ca">Owen Glahn</maintainer>
  <license>BSD</license>
  <author email="owen.glahn@cs.mcgill.ca">Owen Glahn</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>pinocchio</depend>
  <depend>Eigen3</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
