<?xml version="1.0"?>
<package format="2">
  <name>husky_teleop_controller</name>
  <version>0.1.0</version>
  <description>A simple example on publishers and subscribers</description>
  <maintainer email="owen.glahn@mail.mcgill.ca">Owen Glahn</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>

