<?xml version="1.0"?>
<package format="2">
  <name>robot_model</name>
  <version>0.1.0</version>
  <description>use pinocchio in ROS</description>
  <maintainer email="hsiu-chin.lin@cs.mcgill.ca">Hsiu-Chin Lin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
</package>

