<?xml version="1.0"?>
<package format="2">
  <name>inverse_kinematic_controller</name>
  <version>0.1.0</version>
  <description>use pinocchio in ROS</description>
  <maintainer email="owen.glahn@mail.mcgill.ca">Owen Glahn</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
</package>

