<?xml version="1.0"?>
<package format="2">
  	<name>hello_action_client</name>
  	<version>0.1.0</version>
  	<description>An example on using action client</description>
  	<maintainer email="hsiu-chin.lin@cs.mcgill.ca">Hsiu-Chin Lin</maintainer>
  	<license>BSD</license>
  
  	<buildtool_depend>catkin</buildtool_depend>
  
  	<depend>roscpp</depend> 	 	
  	<depend>actionlib</depend>	
  	<depend>hello_action_type</depend>
  
</package>

