<?xml version="1.0"?>
<package format="2">
  	<name>hello_action_type</name>
  	<version>0.1.0</version>
  	<description>An example on defining the action types</description>
  	<maintainer email="hsiu-chin.lin@cs.mcgill.ca">Hsiu-Chin Lin</maintainer>
  	<license>BSD</license>
  	
  	<buildtool_depend>catkin</buildtool_depend>  	
	<depend>actionlib_msgs</depend>
	<depend>message_runtime</depend>
 </package>

